<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CardInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <ImageView
                android:layout_marginTop="20dp"
                android:id="@+id/imgCard"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/card0" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/hintClickToChange"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtCardName" />

            <EditText
                android:id="@+id/edtCardName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintCardName"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtCardType" />

            <AutoCompleteTextView
                android:id="@+id/edtCardType"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintCardType" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtCardNote" />

            <EditText
                android:id="@+id/edtCardNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintCardNote"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtCardID" />

            <EditText
                android:id="@+id/edtCardID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:onClick="xuLyThoat"
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_weight="1"
                    android:text="@string/btnCancel" />

                <Button
                    android:onClick="xuLyLuu"
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Colored"

                    android:text="@string/btnSave" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>